fix: updated launch files to gazebo support on linux. provided launch alternatives for WSL2 and updated docs

--- a/src/robot_description_pkg/CMakeLists.txt
+++ b/src/robot_description_pkg/CMakeLists.txt
@@ -3,6 +3,11 @@ project(robot_description_pkg)
 
 find_package(ament_cmake REQUIRED)
 
+install(FILES
+  LICENSE
+  DESTINATION share/${PROJECT_NAME}
+)
+
 install(DIRECTORY urdf
   DESTINATION share/${PROJECT_NAME}
 )
