--- a/src/robot_sim_pkg/CMakeLists.txt
+++ b/src/robot_sim_pkg/CMakeLists.txt
@@ -25,6 +25,11 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(FILES
+  LICENSE
+  DESTINATION share/${PROJECT_NAME}
+)
+
 install(DIRECTORY
   config
   launch
