--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
-############################
-# ROS2 / colcon
-############################
+# ROS 2 / colcon artifacts
 /build/
 /install/
 /log/
 
-############################
+# CMake
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+compile_commands.json
+Makefile
+
 # Python
-############################
 __pycache__/
 *.pyc
 *.pyo
@@ -18,42 +21,27 @@ __pycache__/
 .venv
 venv/
 
-############################
-# CMake / C++
-############################
-CMakeFiles/
-CMakeCache.txt
-cmake_install.cmake
-Makefile
-compile_commands.json
-*.so
-*.a
+# Binaries and objects
 *.o
+*.a
+*.so
 
-############################
-# Logs / Output
-############################
+# ROS data and logs
 *.log
-*.csv
 *.bag
 *.db3
+*.csv
 
-############################
-# VSCode / IDE
-############################
+# Editors and IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 
-############################
-# OS
-############################
+# OS files
 .DS_Store
 Thumbs.db
 
-############################
-# Misc
-############################
+# Temporary files
 *.bak
 *.tmp
